Improved gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,38 @@ flow_stats
 get_flows
 get_flow_stats
 fast_extract
+
+*.tmp*
+
+figs
+old_data
+old_scripts
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
